# BasicKnowledge

./: .gitignore  README.md
Task2/: CMakeLists.txt  README.md
Task2/include/: my_copy.h
Task2/src/: my_copy.cpp
Task3/: CMakeLists.txt  README.md
Task3/include/: my_list.h
Task3/src/: my_list.cpp
